# GLUT_3D_Grid

./: CMakeLists.txt  README.md  main.cpp
Grid/: Grid.cpp  Grid.h  minAndMax.cpp  onRender.cpp  readFile.cpp  structs.h
input_data/: core.grd  cube.grd  diode.grd
